wrong color on header and footer fixed

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -73,12 +73,15 @@ img{
 	background-color: @brand-primary; 
 	color: #fff;
 	&.ib-hidden{
-		background-color: #f7f6f6;
+		background-color: #f5f5f5;
 		border: 0;
 		height: 52px;
 		div, imb{
 			display: none;
 		}
+    &.loading{
+      background-color: #fff;
+    }
 	}
 
   .navbar-brand{
