--- a/src/less/login.less
+++ b/src/less/login.less
@@ -7,7 +7,7 @@ h1.ib-title{
 }
 
 .ib-login-screen{
-  background-color: #f7f6f6;
+  background-color: #F5F5F5;
   text-align: center;
 }
 
